--- a/JSONEditor/ChromaJSONEditor/ChromaJSONEditor/packages.config
+++ b/JSONEditor/ChromaJSONEditor/ChromaJSONEditor/packages.config
@@ -5,6 +5,9 @@
   <package id="IronPython.StdLib" version="3.4.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="20.4.0.44" targetFramework="net472" />
+  <package id="Syncfusion.Shared.WPF" version="20.4.0.44" targetFramework="net472" />
+  <package id="Syncfusion.Tools.WPF" version="20.4.0.44" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
