--- a/JSONEditor/ChromaJSONEditor/ChromaJSONEditor/packages.config
+++ b/JSONEditor/ChromaJSONEditor/ChromaJSONEditor/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AvalonEdit" version="6.2.0.78" targetFramework="net472" />
   <package id="DynamicLanguageRuntime" version="1.3.3" targetFramework="net472" />
   <package id="IronPython" version="3.4.0" targetFramework="net472" />
   <package id="IronPython.StdLib" version="3.4.0" targetFramework="net472" />
